# algo

./: .gitignore  CMakeLists.txt
inc/math/: common_math.h
matlab/coursera-ml/machine-learning-ex1/ex1/: computeCost.m  computeCostMulti.m  ex1_multi.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  token.mat
matlab/coursera-ml/machine-learning-ex2/ex2/: costFunction.m  costFunctionReg.m  plotData.m  token.mat
matlab/coursera-ml/machine-learning-ex3/ex3/: lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m  token.mat
matlab/coursera-ml/machine-learning-ex4/ex4/: nnCostFunction.m  randInitializeWeights.m  token.mat
matlab/coursera-ml/machine-learning-ex5/ex5/: learningCurve.m  linearRegCostFunction.m  polyFeatures.m  token.mat  validationCurve.m
matlab/coursera-ml/machine-learning-ex6/ex6/: dataset3Params.m  gaussianKernel.m  processEmail.m  token.mat
matlab/coursera-ml/machine-learning-ex7/ex7/: computeCentroids.m  findClosestCentroids.m  pca.m  projectData.m  token.mat
matlab/coursera-ml/machine-learning-ex8/ex8/: cofiCostFunc.m  estimateGaussian.m  selectThreshold.m  selectThreshold.m~  (+1 more)
src/backpack/: backpack.c  backpack.h
src/dp/: largest_rect_area_from_hist.c  max_disjoint_lines.c
src/queue/: linked_queue.c  linked_queue.h
src/string/: longest_palindrome.c  longest_palindrome.h  min_edit_distance.c  my_atoi.c  regular_expression_matching.c  wildcard_matching.c  z_convert.c
src/tree/: binary_tree.c  binary_tree.h
tests/backpack/: backpack_test.c
tests/queue/: linked_queue_test.c
tests/tree/: binary_tree_test.c
